==> ghi-electronics/TinyCLR-Ports/Targets/LPC177x_LPC178x/LPC17_USBC.cpp <==
#include <string.h>
#include "LPC17.h"
#include "../../Drivers/USBClient/USBClient.h"
#define FRAME_INT           0x00000001
#define EP_FAST_INT         0x00000002
#define EP_SLOW_INT         0x00000004
#define DEV_STAT_INT        0x00000008
#define CCEMTY_INT          0x00000010
#define CDFULL_INT          0x00000020
#define RxENDPKT_INT        0x00000040
#define TxENDPKT_INT        0x00000080
#define EP_RLZED_INT        0x00000100
#define ERR_INT             0x00000200
#define PKT_LNGTH_MASK      0x000003FF
#define PKT_DV              0x00000400
#define PKT_RDY             0x00000800
#define CTRL_RD_EN          0x00000001
#define CTRL_WR_EN          0x00000002
#define CMD_SET_ADDR        0x00D00500
#define CMD_CFG_DEV         0x00D80500
#define CMD_SET_MODE        0x00F30500
#define CMD_RD_FRAME        0x00F50500
#define DAT_RD_FRAME        0x00F50200
#define CMD_RD_TEST         0x00FD0500
#define DAT_RD_TEST         0x00FD0200
#define CMD_SET_DEV_STAT    0x00FE0500
#define CMD_GET_DEV_STAT    0x00FE0500
#define DAT_GET_DEV_STAT    0x00FE0200
#define CMD_GET_ERR_CODE    0x00FF0500
#define DAT_GET_ERR_CODE    0x00FF0200
#define CMD_RD_ERR_STAT     0x00FB0500
#define DAT_RD_ERR_STAT     0x00FB0200
#define DAT_WR_BYTE(x)     (0x00000100 | ((x) << 16))
#define CMD_SEL_EP(x)      (0x00000500 | ((x) << 16))
#define DAT_SEL_EP(x)      (0x00000200 | ((x) << 16))
#define CMD_SEL_EP_CLRI(x) (0x00400500 | ((x) << 16))
#define DAT_SEL_EP_CLRI(x) (0x00400200 | ((x) << 16))

bool LPC17_UsbClient_Initialize(UsClientDriver *usbState) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    if (usbState == nullptr)
        return false;

    int32_t controllerIndex = usbState->controllerIndex;

    LPC17_Interrupt_Activate(USB_IRQn, (uint32_t*)&LPC17_UsbClient_InterruptHandler, 0);

    for (int32_t i = 0; i < LPC17_USB_ENDPOINT_COUNT; i++)
        EndpointInit[i].word = 0;       // All useable endpoints initialize to unused

    for (auto pipe = 0; pipe < LPC17_USB_ENDPOINT_COUNT; pipe++) {
        auto idx = 0;
        if (usbState->pipes[pipe].RxEP != USB_ENDPOINT_NULL) {
            idx = usbState->pipes[pipe].RxEP;
            EndpointInit[idx].bits.ED = 0;
            EndpointInit[idx].bits.DE = 0;
        }

        if (usbState->pipes[pipe].TxEP != USB_ENDPOINT_NULL) {
            idx = usbState->pipes[pipe].TxEP;
            EndpointInit[idx].bits.ED = 1;
            EndpointInit[idx].bits.DE = 1;
        }

        if (idx != 0) {
            EndpointInit[idx].bits.EN = idx;
            EndpointInit[idx].bits.IN = 0;//itfc->bInterfaceNumber;
            EndpointInit[idx].bits.ET = USB_ENDPOINT_ATTRIBUTE_BULK & 0x03; //ep->bmAttributes & 0x03;
            EndpointInit[idx].bits.CN = 1;        // Always only 1 configuration = 1
            EndpointInit[idx].bits.AISN = 0;        // No alternate interfaces
            EndpointInit[idx].bits.EE = 1;        // Enable this endpoint
            EndpointInit[idx].bits.MPS = usbState->maxEndpointsPacketSize[idx];
        }
    }

    usbState->firstGetDescriptor = true;

    LPC17_UsbClient_ProtectPins(controllerIndex, true);

    return true;
}

bool LPC17_UsbClient_Uninitialize(UsClientDriver *usbState) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    LPC17_Interrupt_Deactivate(USB_IRQn);

    if (usbState != nullptr) {
        LPC17_UsbClient_ProtectPins(usbState->controllerIndex, false);
        usbState->currentState = USB_DEVICE_STATE_UNINITIALIZED;
    }

    return true;
}

bool LPC17_UsbClient_StartOutput(UsClientDriver* usbState, int32_t endpoint) {
    int32_t m, n, val;

    DISABLE_INTERRUPTS_SCOPED(irq);

    /* if the halt feature for this endpoint is set, then just
       clear all the characters */
    if (usbState->endpointStatus[endpoint] & USB_STATUS_ENDPOINT_HALT) {
        TinyCLR_UsbClient_ClearEndpoints(usbState, endpoint);
        return true;
    }

    //If txRunning, interrupts will drain the queue
    if (!usbDeviceDrivers[usbState->controllerIndex].txRunning[endpoint]) {
        usbDeviceDrivers[usbState->controllerIndex].txRunning[endpoint] = true;

        // Calling both LPC17_UsbClient_TxPacket & EP_TxISR in this routine could cause a TX FIFO overflow
        LPC17_UsbClient_TxPacket(usbState, endpoint);
    }
    else if (irq.IsDisabled()) {

        n = LPC17_UsbClient_EPAdr(endpoint, 1); // It is an output endpoint for sure
        if ((USBEpIntSt & (1 << n)))//&& (USBEpIntEn & (1 << n)) )//only if enabled
        {
            m = n >> 1;

            if (m == 0)//EP0
            {
                USBEpIntClr = 1 << n;
                while ((USBDevIntSt & CDFULL_INT) == 0);
                val = USBCmdData;

                if (val & EP_SEL_STP)        /* Setup Packet */
                {
                    LPC17_UsbClient_ProcessEP0(usbState, 0, 1);// out setup
                }
                else {
                    if ((n & 1) == 0)                /* OUT Endpoint */
                    {
                        LPC17_UsbClient_ProcessEP0(usbState, 0, 0);// out not setup
                    }
                    else {
                        LPC17_UsbClient_ProcessEP0(usbState, 1, 0);// in not setup
                    }
                }
            }
            else {
                if (usbState->queues[m] && usbState->isTxQueue[endpoint])
                    LPC17_UsbClient_ProcessEndPoint(usbState, m, 1);//out
                else
                    LPC17_UsbClient_ProcessEndPoint(usbState, m, 0);//in
            }
        }
    }

    return true;
}

bool LPC17_UsbClient_RxEnable(UsClientDriver* usbState, int32_t endpoint) {
    if (endpoint >= LPC17_USB_ENDPOINT_COUNT)
        return false;

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (nacking_rx_OUT_data[endpoint])
        LPC17_UsbClient_Enpoint_RxInterruptHandler(usbState, endpoint);//force interrupt to read the pending EP

    return true;
}

void LPC17_UsbClient_ResetEvent(UsClientDriver *usbState) {
    LPC17_UsbClient_HardwareReset();
    LPC17_UsbClient_DeviceAddress = 0;

    // clear all flags
    TinyCLR_UsbClient_ClearEvent(usbState, 0xFFFFFFFF);

    for (int32_t ep = 0; ep < LPC17_USB_ENDPOINT_COUNT; ep++) {
        usbDeviceDrivers[usbState->controllerIndex].txRunning[ep] = false;
        usbDeviceDrivers[usbState->controllerIndex].txNeedZLPS[ep] = false;
    }

    usbState->deviceState = USB_DEVICE_STATE_DEFAULT;
    usbState->address = 0;
    TinyCLR_UsbClient_StateCallback(usbState);
}

bool LPC17_UsbClient_ProtectPins(int32_t controllerIndex, bool On) {
    UsClientDriver *usbState = usbDeviceDrivers[controllerIndex].usbState;

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (usbState) {
        if (On) {
            usbState->deviceState = USB_DEVICE_STATE_ATTACHED;

            TinyCLR_UsbClient_StateCallback(usbState);

            LPC17_UsbClient_StartHardware();
        }
        else {
            LPC17_UsbClient_HardwareReset();

            LPC17_UsbClient_DeviceAddress = 0;

            LPC17_UsbClient_StopHardware();
        }

        return true;
    }

    return false;
}

bool TinyCLR_UsbClient_Initialize(UsClientDriver* usbState) {
    return LPC17_UsbClient_Initialize(usbState);
}

bool TinyCLR_UsbClient_Uninitialize(UsClientDriver* usbState) {
    return LPC17_UsbClient_Uninitialize(usbState);
}

bool TinyCLR_UsbClient_StartOutput(UsClientDriver* usbState, int32_t endpoint) {
    return LPC17_UsbClient_StartOutput(usbState, endpoint);
}

bool TinyCLR_UsbClient_RxEnable(UsClientDriver* usbState, int32_t endpoint) {
    return LPC17_UsbClient_RxEnable(usbState, endpoint);
}
